- small layout bugfix

--- a/app/less/responsive.less
+++ b/app/less/responsive.less
@@ -235,7 +235,7 @@
   }
   .page4 {
     .section-wrapper {
-      margin-top: 10em;
+      padding-top: 10em;
     }
     .heading {
       padding-top: 6em;
